<resources>
    <string name="app_name">ChatNow</string>

    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter password</string>
    <string name="Login_Button_Lable">Login!!!</string>
    <string name="Signup_Lable">Signup!!</string>
    <string name="title_activity_sign_up">SignupActivity</string>
    <string name="Sign_Up_Button">SignUp!!!</string>
    <string name="email_hint">Enter Email Address</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="signup_error_message">please fill all fields</string>
    <string name="signupp_error_title">Oops!!!</string>
    <string name="login_error_message">please fill username and password fields</string>
    <string name="login_error_title">Oops!!!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">Inbox is empty!!!</string>
    <string name="empty_friends_label">No friends in the list!!!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_external_storage">"There is an error accessing your Device Storage Area"</string>
    <string name="general_error">Sorry, There is an error!</string>
    <string name="vedio_length_error">"The selected video must be less then 10 MB"</string>
    <string name="file_problem">"There  was a problem with selected file"</string>
    <string name="file_size">"Selected file size is too large, Select another one"</string>
    <string name="empty_recipients_list_message">"Choose People First!!!"</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with selected file! please select a different file.</string>
    <string name="error_selecting_file_title">We are sorry!!</string>
    <string name="success_message">Message sent!!</string>
    <string name="error_sending_message">There was an error sending your message!! please try again..</string>

    <string name="hello_world">Hello world!</string>
    <string name="error_title">We R Sorry</string>
    <string name="menu_camera_label">Camera</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="title_activity_recipient">Choose Recipient</string>
    <string name="title_activity_try">TryActivity</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="title_activity_test">"Choose "</string>
    <string name="image_description">Recieved Image</string>
    <string name="title_activity_view_image">ChatNow</string>
</resources>
